--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'AktivGrotesk';
+    src: url('./assets/fonts/hinted-AktivGroteskW06-Bold.eot');
+    src: local('Aktiv Grotesk Bold'), local('AktivGrotesk-Bold'),
+        url('./assets/fonts/hinted-AktivGroteskW06-Bold.eot?#iefix') format('embedded-opentype'),
+        url('./assets/fonts/hinted-AktivGroteskW06-Bold.woff2') format('woff2'),
+        url('./assets/fonts/hinted-AktivGroteskW06-Bold.woff') format('woff'),
+        url('./assets/fonts/hinted-AktivGroteskW06-Bold.ttf') format('truetype'),
+        url('./assets/fonts/hinted-AktivGroteskW06-Bold.svg#AktivGroteskW06-Bold') format('svg');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'AktivGrotesk';
+    src: url('./assets/fonts/hinted-AktivGroteskW06-Light.eot');
+    src: local('Aktiv Grotesk W06 Light'), local('AktivGroteskW06-Light'),
+        url('./assets/fonts/hinted-AktivGroteskW06-Light.eot?#iefix') format('embedded-opentype'),
+        url('./assets/fonts/hinted-AktivGroteskW06-Light.woff2') format('woff2'),
+        url('./assets/fonts/hinted-AktivGroteskW06-Light.woff') format('woff'),
+        url('./assets/fonts/hinted-AktivGroteskW06-Light.ttf') format('truetype'),
+        url('./assets/fonts/hinted-AktivGroteskW06-Light.svg#AktivGroteskW06-Light') format('svg');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'AktivGrotesk';
+    src: url('./assets/fonts/hinted-AktivGroteskW01-Regular.eot');
+    src: local('Aktiv Grotesk W01 Regular'), local('AktivGroteskW01-Regular'),
+        url('./assets/fonts/hinted-AktivGroteskW01-Regular.eot?#iefix') format('embedded-opentype'),
+        url('./assets/fonts/hinted-AktivGroteskW01-Regular.woff2') format('woff2'),
+        url('./assets/fonts/hinted-AktivGroteskW01-Regular.woff') format('woff'),
+        url('./assets/fonts/hinted-AktivGroteskW01-Regular.ttf') format('truetype'),
+        url('./assets/fonts/hinted-AktivGroteskW01-Regular.svg#AktivGroteskW01-Regular') format('svg');
+    font-weight: 400;
+    font-style: normal;
+}
+
